--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,11 @@
 <footer>
   <div class="footer-inner">
-    <div class="footer-top clearFix">
+    <!--div class="footer-top clearFix">
       <ul class="footer-menu">
         <li class="menu-item"><a href="#">문의</a></li>
         <li class="menu-item menu-item-personal"><a href="#">개인정보처리방침</a></li>
       </ul>
-    </div>
+    </div -->
     <address>
       <div class="addr-info">
         <p class="co-info">버즈메트릭스</p>
