--- a/header.html
+++ b/header.html
@@ -249,6 +249,10 @@
             <p class="preset-btn">
               <a href="#" class="add-icon">검색설정 가져오기</a>
             </p>
+            <p class="preset-save-btn">
+              <input type="checkbox" id="presetSave">
+              <label for="presetSave">검색설정 저장하기</label>
+            </p>
           </div>
           <div class="detail-btn-wrap">
             <p id="detailCncl" class="cancel-btn">취소</p>
