--- a/now.html
+++ b/now.html
@@ -1023,6 +1023,7 @@
 
   <script src='./src/js/jquery-3.5.1.js'></script>
   <script src="./src/js/include.js"></script>
+  <script src="./src/js/lib.js"></script>
   <script src="./src/js/main.js"></script>
 
   <!-- <script>
