--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.png">
   <title>buzz ON</title>
 
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./src/css/style.css">
+
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -175,6 +178,75 @@
                 <span class="title-more"><a href="#">더 보기</a></span>
               </div>
               <div class="article-content">
+                <div id="youtHotSwpContainer" class="article-list-wrap swiper-container">
+                  <div class="thumb-list swiper-wrapper">
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
+                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
+                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
+                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
+                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
+                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
+                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
+                      </a>
+                    </div>
+                    <div class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <!-- article class="content-article article-youtube-hot width-3-2 fl-l">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3>유튜브 인기 동영상</h3>
+                <span class="title-more"><a href="#">더 보기</a></span>
+              </div>
+              <div class="article-content">
                 <div class="article-list-wrap">
                   <ul class="thumb-list">
                     <li class="thumb-item">
@@ -199,7 +271,7 @@
                 </div>
               </div>
             </div>
-          </article>
+          </article -->
         </div>
       </section>
     </div>
@@ -211,6 +283,7 @@
 
   <script src='./src/js/jquery-3.5.1.js'></script>
   <script src="./src/js/include.js"></script>
+  <script src="./src/js/lib.js"></script>
   <script src="./src/js/main.js"></script>
 </body>
 
