--- a/trend.html
+++ b/trend.html
@@ -1472,6 +1472,7 @@
 
   <script src='./src/js/jquery-3.5.1.js'></script>
   <script src="./src/js/include.js"></script>
+  <script src="./src/js/lib.js"></script>
   <script src="./src/js/main.js"></script>
 </body>
 
