--- a/footer.html
+++ b/footer.html
@@ -49,10 +49,13 @@
               </div> -->
               <div class="sort-select-box">
                 <select name="sortModalList" id="sortModalList" class="sort-select">
-                  <option value="latest" selected>최신순</option>
-                  <option value="views">조회수순</option>
-                  <option value="comments">댓글수순</option>
-                  <option value="likes">추천수순</option>
+                  <option value="latest" selected>등록일</option>
+                  <option value="title">제목</option>
+                  <option value="engagements">인게이지먼트</option>
+                  <option value="views">조회수</option>
+                  <option value="likes">좋아요수</option>
+                  <option value="comments">댓글수</option>
+                  <option value="share">공유수</option>
                 </select>
                 <span class="icon-arrow"></span>
               </div>
