--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <input id="idRemember" type="checkbox">
                 <label for="idRemember">아이디 기억하기</label>
               </p>
-              <p class="find-user-info">
+              <!-- <p class="find-user-info">
                 <a href="#">아이디/비밀번호 찾기</a>
               </p>
               <p class="join-us">
                 <a id="joinUs" href="#">회원가입</a>
-              </p>
+              </p> -->
             </div>
           </div>
           <!-- </div> -->
