--- a/now.html
+++ b/now.html
@@ -70,7 +70,7 @@
           <article class="content-article article-engagement">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon blind">ENGAGEMENT</h3>
+                <h3 class="add-icon blind">ABOUT KEYWORD</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
@@ -87,7 +87,7 @@
                     <ul class="chart-info-list">
                       <li class="info-item info-engagement">
                         <!-- <div class="item-color cht-grey"></div> -->
-                        <h4 class="item-title">ENGAGEMENT</h4>
+                        <h4 class="item-title">TOTAL ENGAGEMENT</h4>
                         <p class="item-num">150,329</p>
                       </li>
                       <li class="info-item info-views">
