--- a/hottest.html
+++ b/hottest.html
@@ -56,7 +56,7 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-sizeP">"베개"</strong>의 가장 핫한 포스트는 <strong class="txt-sizeP">"유튜브"</strong>의
+                  키워드 <strong class="txt-sizeP">"베개"</strong>의 가장 핫한 포스트는 <strong class="txt-sizeP">"유튜브"</strong>의
                   <strong class="txt-sizeP">"나랏말싸미 듕긕에
                     달아 문자와로 서르 사맛디 문장 더 길게길게
                     아니할쎄"</strong>입니다.
