--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
     </div>
     <p id="moDetailOpen" class="search-slide-btn"></p>
 
-    <div class=" search-area clearFix">
+    <div class="search-area">
       <div class="search-keyword-wrap">
         <div class="search-input">
           <input type="text" id="searchWord" placeholder="검색어를 입력하세요">
