--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="header-inner clearFix">
+  <div class="header-inner">
     <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
     <div class="mobile-menu-btn">
       <!-- <p class="menu-line line-1"></p>
