--- a/footer.html
+++ b/footer.html
@@ -10,12 +10,8 @@
       <div class="addr-info">
         <p class="co-info">버즈메트릭스</p>
         <p class="co-addr">서울시 서초구 양재천로19길 42 세련빌딩 5층 버즈메트릭스</p>
-        <p class="co-phone">
-          <span>TEL</span><em>+82 2 6244 0732</em>
-        </p>
-        <p class="co-fax">
-          <span>FAX</span><em>+82 2 6244 0700</em>
-        </p>
+        <p class="co-phone"><span>TEL</span><em>+82 2 6244 0732</em></p>
+        <p class="co-fax"><span>FAX</span><em>+82 2 6244 0700</em></p>
       </div>
       <p class="copyright">COPYRIGHT(C) 2014 BUZZ METRIX.</p>
     </address>
