220422 금 1434 여백 테스트

--- a/footer.html
+++ b/footer.html
@@ -346,20 +346,16 @@
           <div class="show-origin-bottom">
             <ul class="origin-info-list">
               <li class="origin-info-item">
-                <p class="info-title info-views">Views</p>
-                <span class="info-num info-views-num">598,115</span>
+                <p class="info-title info-views">Views</p><span class="info-num info-views-num">598,115</span>
               </li>
               <li class="origin-info-item">
-                <p class="info-title info-likes">Likes</p>
-                <span class="info-num info-likes-num">2,788</span>
+                <p class="info-title info-likes">Likes</p><span class="info-num info-likes-num">2,788</span>
               </li>
               <li class="origin-info-item">
-                <p class="info-title info-comments">Comments</p>
-                <span class="info-num info-comments-num">17,158</span>
+                <p class="info-title info-comments">Comments</p><span class="info-num info-comments-num">17,158</span>
               </li>
               <li class="origin-info-item">
-                <p class="info-title info-shares">Shares</p>
-                <span class="info-num info-shares-num">370</span>
+                <p class="info-title info-shares">Shares</p><span class="info-num info-shares-num">370</span>
               </li>
             </ul>
           </div>
