--- a/userPreset.html
+++ b/userPreset.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="http://www.buzzon.co.kr">
   <meta property="og:description" content="Buzz On">
   <meta property="og:image" content="./src/img/common/img-share.png">
-  <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.svg">
+  <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.png">
   <title>buzz ON</title>
 
   <link rel="stylesheet" href="./src/css/style.css">
