--- a/index.html
+++ b/index.html
@@ -62,7 +62,250 @@
         </div>
       </section>
 
-      <section class="content-section intro-keyword-section">
+      <section class="content-section">
+        <div class="section-inner">
+          <article class="content-article article-keyword-news">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3>뜨고 있는 뉴스 키워드</h3>
+              </div>
+              <div class="article-content">
+                <div id="" class="article-rank-wrap">
+                  <div class="trend-rank-wrap">
+                    <div class="trend-rank-list">
+                      <h4>정치</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득세</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>경제</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득세</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>사회</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득세</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>IT·과학</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득세</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>연예</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득세</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <!--section class="content-section intro-keyword-section">
         <div class="section-inner">
           <article class="content-article article-keyword-now intro-keyword-now">
             <div class="article-inner">
@@ -139,9 +382,9 @@
             </div>
           </article>
         </div>
-      </section>
+      </section -->
 
-      <section class="content-section intro-keyword-section">
+      <!-- section class="content-section intro-keyword-section">
         <div class="section-inner">
           <article class="content-article article-keyword-now intro-keyword-now width-5-1">
             <div class="article-inner">
@@ -514,7 +757,7 @@
             </div>
           </article>
         </div>
-      </section>
+      </section -->
 
       <section class="content-section">
         <div class="section-inner">
